--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
   },
   "dependencies": {
     "gatsby": "^2.26.1",
+    "gatsby-background-image": "^1.4.0",
+    "gatsby-image": "^2.9.0",
+    "gatsby-plugin-sharp": "^2.12.2",
+    "gatsby-source-contentful": "^4.4.1",
+    "gatsby-source-filesystem": "^2.9.1",
+    "gatsby-transformer-sharp": "^2.10.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^4.1.0"
